<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/editText_Label_Save"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/button_Label_Cancel"
        app:layout_constraintStart_toStartOf="@id/editText_save"
        app:layout_constraintTop_toTopOf="@id/editText_save" />

    <Button
        android:id="@+id/button_Save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_Label_Save"
        app:layout_constraintEnd_toEndOf="@+id/editText_save"
        app:layout_constraintTop_toTopOf="@id/button_Cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>
